# SortShell

./: .gitignore  build.sh  run_tests.sh  shellsort  shellsort.cpp
Anothertasts/SecondTaskPartOne/: arrayGenerator.hpp  insertionSort.cpp  insertionSort.hpp  main.cpp  merge.hpp  mergeSort.hpp
Anothertasts/menuhome/: main.cpp  menu_func.cpp  menu_func.hpp  menu_items.hpp
SecondTask15_10_2025/: after_refactoring_3  after_refactoring_3.cpp  after_regactoring_3  after_regactoring_3.cpp  before_refactoring_3 copy  before_refactoring_3 copy.cpp  before_refactoring_3.cpp  changinArray.cpp  changinArray.hpp  generateArray.cpp  generateArray.hpp  power.sh  processingArray.cpp  processingArray.hpp
SecondTaskPartOne/: README  arrayGenerator.cpp  merge.cpp  mergeSort.cpp  power.sh  timeTest.cpp  timeTest.hpp
build_ninja/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  build.ninja  cmake_install.cmake
build_ninja/SecondTask15_10_2025/: CTestTestfile.cmake  SecondTask15_10_2025  cmake_install.cmake
menuclass/: menu_func.hpp
menuhome/: menu.hpp  menu_func.cpp  menu_func.hpp  menu_items.cpp  menu_items.hpp  power.sh
sort/: CMakeLists.txt
sort/SecondTask15_10_2025/: CmakeLists.txt  after_refactoring_3.cpp  before_refactoring_3.cpp
sort/menuclass/: CMakeLists.txt  menu_items.cpp
sort/tests/: CMakeLists.txt
sort/tests/src/: CMakeLists.txt  bubble_sort.cpp  bubble_sort.hpp
sort/tests/test/: CMakeLists.txt  maintest.cpp
sortShell/: CMakeLists.txt  main  main.cpp  power.sh  sortShell.cpp  sortShell.hpp  voidProverka.cpp  voidProverka.hpp
(+5 files in other folders)
